Add support for custom Java GC types (#566)
* Add support for custom Java GC types

Also some cleanup of argument handling to make it user configurable if possible

* Revert changes